# TrabalhoAED

./: Banco.cpp  Banco.h  CMakeLists.txt  Leitor_Arquivo.cpp  Leitor_Arquivo.h  Lista.cpp  Lista.h  No.cpp  No.h  Tabela.cpp  Tabela.h  main.cpp  timer.h
